objects/kugo2p__ConfigurationOption__c.object
<CustomObject>
    <description>Kugamon - Related object to Additional Product Info and Configuration Group that controls the Configuration behavior of Option Products.</description>
    <fields>
        <fullName>ProductOptionId__c</fullName>
        <description>The CPQ Product Option this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The CPQ Product Option this record was created from</inlineHelpText>
        <label>ProductOptionId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>kugo2p__ConfigurationGroup__c.kugo2p__AdditionalProductInfo__c</field>
                <operation>equals</operation>
                <valueField>$Source.kugo2p__ConfigureProduct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>kugo2p__ConfigurationGroup__c</referenceTo>
        <relationshipLabel>Configuration Options</relationshipLabel>
        <relationshipName>Configuration_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigureProduct__c</fullName>
        <label>Configure Product</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Configuration Options</relationshipLabel>
        <relationshipName>Configuration_Options1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultQuantity__c</fullName>
        <description>Override Option Product&apos;s Default Quantity value. Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1.</description>
        <inlineHelpText>Override Option Product&apos;s Default Quantity value. Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDiscount__c</fullName>
        <description>Override Option Product&apos;s Default Line Discount value. Sets the Line Discount value in Quote and Order configurator page. Applicable when Price Behavior is set to Discounted.</description>
        <inlineHelpText>Override Option Product&apos;s Default Line Discount value. Sets the Line Discount value in Quote and Order configurator page. Applicable when Price Behavior is set to Discounted</inlineHelpText>
        <label>Line Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockLineDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Option Product&apos;s Lock Line Discount value. Prevents Line Discount to be editable in Quote and Order configurator page. Does not lock the Line Discount at the record level.</description>
        <inlineHelpText>Override Option Product&apos;s Lock Line Discount value. Prevents Line Discount to be editable in Quote and Order configurator page. Does not lock the Line Discount at the record level.</inlineHelpText>
        <label>Lock Line Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Option Product&apos;s Lock Quantity value. Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level.</description>
        <inlineHelpText>Override Option Product&apos;s Lock Quantity value. Prevents Quantity to be editable in Quote and Order configurator page</inlineHelpText>
        <label>Lock Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockSalesPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Option Product&apos;s Lock Sales Price value. Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level.</description>
        <inlineHelpText>Override Option Product&apos;s Lock Sales Price value. Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level.</inlineHelpText>
        <label>Lock Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__MaximumQuantity__c</fullName>
        <description>Override Option Product&apos;s Maximum Quantity value. Sets the maximum Quantity value limit in Quote and Order configurator page. Not applicable to Bundled and Defined Quantity Behavior.</description>
        <inlineHelpText>Override Option Product&apos;s Maximum Quantity value. Sets the maximum Quantity value limit in Quote and Order configurator page. Not applicable to Bundled and Defined Quantity Behavior</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__MinimumQuantity__c</fullName>
        <description>Override Option Product&apos;s Minimum Quantity value. Sets the minimum Quantity value limit in Quote and Order configurator page. Not applicable to Bundled and Defined Quantity Behavior.</description>
        <inlineHelpText>Override Option Product&apos;s Minimum Quantity value. Sets the minimum Quantity value limit in Quote and Order configurator page. Not applicable to Bundled and Defined Quantity Behavior</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__OptionProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option Product</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Member of Configurations</relationshipLabel>
        <relationshipName>Configuration_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBehavior__c</fullName>
        <description>In Quote and Order Configurator, Included will Lock Sales Price &amp; Line Discount, set Sales Price to Zero. Discounted uses either Default Line Discount or Price Discount. Related or, if blank, will allow edits to Sales Prices &amp; Line Discount</description>
        <inlineHelpText>In Quote and Order Configurator page, Included will Lock Sales Price, Lock Line Discount, and set Sales Price to Zero. Related or, if blank, will allow edits to Line Discount, and set Sales Price</inlineHelpText>
        <label>Price Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PriceDiscount__c</fullName>
        <description>Applies a Discount Amount to the List Price to become the Sales Price value in Quote and Order configurator page. Applicable when Price Behavior is set to Discounted.</description>
        <inlineHelpText>Applies a Discount Amount to the List Price to become the Sales Price value in Quote and Order configurator page. Applicable when Price Behavior is set to Discounted</inlineHelpText>
        <label>Price Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityBehavior__c</fullName>
        <description>In Quote and Order Configurator page, Bundled will Lock Quantity and multiply the Default Quantity by the Configured Product quantity. Defined will Lock Quantity and maintain Default Quantity. Related or, if blank, will allow edits of Default Quantity.</description>
        <inlineHelpText>In Quote and Order Configurator page, Bundled will Lock Quantity and multiply the Default Quantity by the Configured Product quantity. Defined will Lock Quantity and maintain Default Quantity. Related or, if blank, will allow edits of Default Quantity</inlineHelpText>
        <label>Quantity Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Product is included in Configured Product. Cannot be removed. Requires Quantity Behavior as Bundled or Defined</description>
        <inlineHelpText>Option Product is included in Configured Product. Cannot be removed. Requires Quantity Behavior as Bundled or Defined</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Option Product is suggested as part of Configured Product. Can be removed.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Configuration Option</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ConfigureProduct__c</columns>
        <columns>kugo2p__ConfigurationGroup__c</columns>
        <columns>kugo2p__OptionProduct__c</columns>
        <columns>kugo2p__Required__c</columns>
        <columns>kugo2p__Selected__c</columns>
        <columns>kugo2p__QuantityBehavior__c</columns>
        <columns>kugo2p__DefaultQuantity__c</columns>
        <columns>kugo2p__PriceBehavior__c</columns>
        <columns>kugo2p__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Configuration Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__DiscountCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(kugo2p__PriceBehavior__c) = &quot;Discounted&quot;,
  OR(
    AND(
      ISBLANK(kugo2p__LineDiscount__c),
      ISBLANK(kugo2p__PriceDiscount__c)
    ),
    AND(
      NOT(ISBLANK(kugo2p__LineDiscount__c)),
      NOT(ISBLANK(kugo2p__PriceDiscount__c))
    )
  )
)</errorConditionFormula>
        <errorMessage>You must enter either Line Discount or Price Discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityDefaultCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c &lt; kugo2p__DefaultQuantity__c</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than or equal to Default Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityMinimumCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c &lt; kugo2p__MinimumQuantity__c</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than or equal to Minimum Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityZeroCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than Zero</errorMessage>
    </validationRules>
</CustomObject>